# gota-tun-android-app

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/kotlin/net/mullvad/gotatunandroid/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/kotlin/net/mullvad/gotatunandroid/: MainActivity.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/di/: AppGraph.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/domain/: AppSettingsRepository.kt  ConfigRepository.kt  WireGuardConfigParser.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/domain/model/: VpnConfig.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/config/: ConfigImportScreen.kt  ConfigImportViewModel.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/configlist/: ConfigListScreen.kt  ConfigListViewModel.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/dashboard/: DashboardScreen.kt  DashboardViewModel.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/manual/: ManualEntryScreen.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/navigation/: NavigationViewModel.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/settings/: SettingsScreen.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/splittunneling/: SplitTunnelingScreen.kt  SplitTunnelingViewModel.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/kotlin/net/mullvad/gotatunandroid/vpn/: GotaTunService.kt  GotaTunWrapper.kt  TunnelBroadcastReceiver.kt  TunnelTileService.kt  VpnController.kt  VpnControllerImpl.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/kotlin/net/mullvad/gotatunandroid/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml  uniffi.toml
rust/src/: lib.rs  rust.udl
