[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "gotatun_jni"
crate-type = ["cdylib"]

[dependencies]
gotatun = { version = "0.5.1", features = ["device"] }
jni = { version = "0.21", default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
ipnetwork = "0.21"
libc = "0.2"
log = "0.4"
android_logger = "0.14"
once_cell = "1"

