[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
name = "gotatun_jni"
crate-type = ["cdylib"]

[dependencies]
gotatun = { version = "0.5.1", features = ["device"] }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
ipnetwork = "0.21"
libc = "0.2"
log = "0.4"
android_logger = "0.14"
uniffi = { version = "0.31", features = [ "cli" ] }

[build-dependencies]
uniffi = { version = "0.31.1", features = [ "build" ] }

[features]
ffi-trace = ["uniffi/ffi-trace"]

# Strip embedded DWARF debug info from the .so on debug builds.
# This reduces the library from ~110 MB → ~10 MB.
# The binary is still fully debuggable via source-level stepping; the NDK
# keeps a separate .so with symbols in the build tree for symbolication.
[profile.dev]
strip = "debuginfo"

# Release builds: full optimisation + strip everything.
[profile.release]
opt-level = 3
strip = true
lto = true

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "bindgen"
path = "bindgen.rs"

